# website

./: .npmrc  .tool-versions  LICENSE  README.md  init-schemas.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  website.code-workspace
.github/workflows/: deploy.yml
egohygiene.io/: README.md  astro.config.mjs  astro.config.mts  eslint.config.mjs  package.json  pnpm-lock.yaml  tree.txt  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.base.json  tsconfig.build.json  tsconfig.cli.json  tsconfig.docs.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.package.json  tsconfig.playground.json  tsconfig.storybook.json  tsconfig.typecheck.json  tsconfig.types.json  tsconfig.vitest.json
egohygiene.io/.storybook/: main.ts  manager-head.html  manager.ts  preview-head.html  preview.ts
egohygiene.io/config/: typedoc.json
egohygiene.io/db/: config.ts  seed.ts
egohygiene.io/dist-node/: tsconfig.node.tsbuildinfo
egohygiene.io/docs/: TSCONFIG.md
egohygiene.io/plugins/: remark-modified-time.ts
egohygiene.io/public/: CNAME
egohygiene.io/src/: astro-shim.d.ts  content.config.ts  env.d.ts  globals.d.ts
egohygiene.io/src/components/: BaseHead.astro  CategoryCarousel.astro  FadeIn.tsx  Footer.astro  Header.astro  index.ts
egohygiene.io/src/data/: categories.ts  (+1 more)
egohygiene.io/types/: astro.ts  vfile.d.ts
scripts/: clean_html.py  generate_map.py  validate-data.ts
src/data/: pillars.json  synapses.json  systems.json  tags.json  terms.json
src/models/: Pillar.ts  Synapse.ts  System.ts  Tag.ts  Term.ts
(+80 files in other folders)
